k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vhsm
  labels:
    name: vhsm
    purpose: cryptographic-key-management
